# internal/proto/entity.pb.go
@@ -482,12 +482,12 @@ func (x *MediaAttachment) GetSizeBytes() int64 {
 type Comment struct {
 	state           protoimpl.MessageState `protogen:"open.v1"`
 	Id              string                 `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
-	PostId          string                 `protobuf:"bytes,2,opt,name=post_id,json=postId,proto3" json:"post_id,omitempty"`
-	AuthorId        string                 `protobuf:"bytes,3,opt,name=author_id,json=authorId,proto3" json:"author_id,omitempty"`
-	AuthorUsername  string                 `protobuf:"bytes,4,opt,name=author_username,json=authorUsername,proto3" json:"author_username,omitempty"`
-	AuthorAvatar    string                 `protobuf:"bytes,5,opt,name=author_avatar,json=authorAvatar,proto3" json:"author_avatar,omitempty"`
-	Text            string                 `protobuf:"bytes,6,opt,name=text,proto3" json:"text,omitempty"`
-	ParentCommentId *string                `protobuf:"bytes,7,opt,name=parent_comment_id,json=parentCommentId,proto3,oneof" json:"parent_comment_id,omitempty"`
+	ParentCommentId string                 `protobuf:"bytes,2,opt,name=parent_comment_id,json=parentCommentId,proto3" json:"parent_comment_id,omitempty"`
+	PostId          string                 `protobuf:"bytes,3,opt,name=post_id,json=postId,proto3" json:"post_id,omitempty"`
+	AuthorId        string                 `protobuf:"bytes,4,opt,name=author_id,json=authorId,proto3" json:"author_id,omitempty"`
+	AuthorName      string                 `protobuf:"bytes,5,opt,name=author_name,json=authorName,proto3" json:"author_name,omitempty"`
+	AuthorAvatar    string                 `protobuf:"bytes,6,opt,name=author_avatar,json=authorAvatar,proto3" json:"author_avatar,omitempty"`
+	Content         string                 `protobuf:"bytes,7,opt,name=content,proto3" json:"content,omitempty"`
 	Attachments     []*MediaAttachment     `protobuf:"bytes,8,rep,name=attachments,proto3" json:"attachments,omitempty"`
 	LikeCount       int32                  `protobuf:"varint,9,opt,name=like_count,json=likeCount,proto3" json:"like_count,omitempty"`
 	IsLikedByMe     bool                   `protobuf:"varint,10,opt,name=is_liked_by_me,json=isLikedByMe,proto3" json:"is_liked_by_me,omitempty"`
@@ -535,6 +535,13 @@ func (x *Comment) GetId() string {
 	return ""
 }
 
+func (x *Comment) GetParentCommentId() string {
+	if x != nil {
+		return x.ParentCommentId
+	}
+	return ""
+}
+
 func (x *Comment) GetPostId() string {
 	if x != nil {
 		return x.PostId
@@ -549,9 +556,9 @@ func (x *Comment) GetAuthorId() string {
 	return ""
 }
 
-func (x *Comment) GetAuthorUsername() string {
+func (x *Comment) GetAuthorName() string {
 	if x != nil {
-		return x.AuthorUsername
+		return x.AuthorName
 	}
 	return ""
 }
@@ -563,16 +570,9 @@ func (x *Comment) GetAuthorAvatar() string {
 	return ""
 }
 
-func (x *Comment) GetText() string {
+func (x *Comment) GetContent() string {
 	if x != nil {
-		return x.Text
-	}
-	return ""
-}
-
-func (x *Comment) GetParentCommentId() string {
-	if x != nil && x.ParentCommentId != nil {
-		return *x.ParentCommentId
+		return x.Content
 	}
 	return ""
 }
@@ -1094,15 +1094,16 @@ const file_entity_proto_rawDesc = "" +
 	"\x03url\x18\x01 \x01(\tR\x03url\x12\x12\n" +
 	"\x04type\x18\x02 \x01(\tR\x04type\x12\x1d\n" +
 	"\n" +
-	"size_bytes\x18\x03 \x01(\x03R\tsizeBytes\"\x89\x04\n" +
+	"size_bytes\x18\x03 \x01(\x03R\tsizeBytes\"\xec\x03\n" +
 	"\aComment\x12\x0e\n" +
-	"\x02id\x18\x01 \x01(\tR\x02id\x12\x17\n" +
-	"\apost_id\x18\x02 \x01(\tR\x06postId\x12\x1b\n" +
-	"\tauthor_id\x18\x03 \x01(\tR\bauthorId\x12'\n" +
-	"\x0fauthor_username\x18\x04 \x01(\tR\x0eauthorUsername\x12#\n" +
-	"\rauthor_avatar\x18\x05 \x01(\tR\fauthorAvatar\x12\x12\n" +
-	"\x04text\x18\x06 \x01(\tR\x04text\x12/\n" +
-	"\x11parent_comment_id\x18\a \x01(\tH\x00R\x0fparentCommentId\x88\x01\x01\x128\n" +
+	"\x02id\x18\x01 \x01(\tR\x02id\x12*\n" +
+	"\x11parent_comment_id\x18\x02 \x01(\tR\x0fparentCommentId\x12\x17\n" +
+	"\apost_id\x18\x03 \x01(\tR\x06postId\x12\x1b\n" +
+	"\tauthor_id\x18\x04 \x01(\tR\bauthorId\x12\x1f\n" +
+	"\vauthor_name\x18\x05 \x01(\tR\n" +
+	"authorName\x12#\n" +
+	"\rauthor_avatar\x18\x06 \x01(\tR\fauthorAvatar\x12\x18\n" +
+	"\acontent\x18\a \x01(\tR\acontent\x128\n" +
 	"\vattachments\x18\b \x03(\v2\x16.proto.MediaAttachmentR\vattachments\x12\x1d\n" +
 	"\n" +
 	"like_count\x18\t \x01(\x05R\tlikeCount\x12#\n" +
@@ -1112,8 +1113,7 @@ const file_entity_proto_rawDesc = "" +
 	"\n" +
 	"created_at\x18\f \x01(\v2\x1a.google.protobuf.TimestampR\tcreatedAt\x129\n" +
 	"\n" +
-	"updated_at\x18\r \x01(\v2\x1a.google.protobuf.TimestampR\tupdatedAtB\x14\n" +
-	"\x12_parent_comment_id\"\xaa\x01\n" +
+	"updated_at\x18\r \x01(\v2\x1a.google.protobuf.TimestampR\tupdatedAt\"\xaa\x01\n" +
 	"\fCommentEvent\x126\n" +
 	"\n" +
 	"event_type\x18\x01 \x01(\x0e2\x17.proto.CommentEventTypeR\teventType\x12(\n" +
@@ -1233,7 +1233,6 @@ func file_entity_proto_init() {
 	if File_entity_proto != nil {
 		return
 	}
-	file_entity_proto_msgTypes[3].OneofWrappers = []any{}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
